# deepblue_planning_control

./: README.md
pro1_ws/src/vehicle_control/src/: pid_controller.cpp  reference_line.cpp  vehicle_control.cpp
pro2_ws/src/stanley_control/: CMakeLists.txt  package.xml
pro2_ws/src/stanley_control/data/: referenceline_2d_mod.txt
pro2_ws/src/stanley_control/include/: common.h  stanley_control.h
pro2_ws/src/stanley_control/src/: main.cpp  stanley_control.cpp
pro3_ws/src/lqr_control/: CMakeLists.txt  package.xml
pro3_ws/src/lqr_control/data/: town02_reference_line.txt
pro3_ws/src/lqr_control/include/: common.h  lqr_controller.h  lqr_controller_node.h  pid_controller.h  reference_line.h
pro3_ws/src/lqr_control/launch/: demo.launch
pro3_ws/src/lqr_control/rviz/: lqr_control.rviz
pro3_ws/src/lqr_control/src/: lqr_controller.cpp  lqr_controller_node.cpp  main.cpp  pid_controller.cpp  reference_line.cpp
pro5_ws/src/path_planning/: CMakeLists.txt  package.xml
pro5_ws/src/path_planning/data/: town01_reference_line.txt
pro5_ws/src/path_planning/include/: common.h  cpprobotics_types.h  cubic_spline.hpp  frenet_optimal_trajectory.h  frenet_path.h  lqr_controller.h  map.h  path_planning_node.h  quartic_polynomial.h  quintic_polynomial.h  visualization.h
pro5_ws/src/path_planning/launch/: demo.launch  planner.launch
pro5_ws/src/path_planning/rviz/: lqr_control.rviz
pro5_ws/src/path_planning/src/: cubic_spline.cpp  frenet_optimal_trajectory.cpp  lqr_controller.cpp  main.cpp  path_planning_node.cpp  visualization.cpp
(+3 files in other folders)
